fix(TodoItem): wrap long text properly

--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -6,6 +6,8 @@
 
 .todo-list__item-text {
   flex: 1;
+  overflow: hidden;
+  overflow-wrap: break-word
 }
 
 .todo-list__item--completed {
